refactor: product routes and controller
